[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/drive-download-20210131T205603Z-001/Green Monster Lick Blech Mad Head Tongue3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_Stationary.gd" type="Script" id=2]
[ext_resource path="res://Sprites/drive-download-20210131T205603Z-001/Green Monster Lick Blech Mad Head Tongue1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/drive-download-20210131T205603Z-001/Green Monster Lick Blech Mad Head Tongue2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Movement",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Damage",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.25, 34.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 333.721, 346.898 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 838.651, 529.157 )

[node name="Tentacle Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -0.0936432 )
scale = Vector2( 2.17055, 2.18811 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
